[gd_scene load_steps=3 format=3 uid="uid://dd3fovm8uitv"]

[ext_resource type="Script" path="res://main.gd" id="1_t63lk"]
[ext_resource type="PackedScene" uid="uid://ce6s101plkf7x" path="res://ThoughtSpawner.tscn" id="2_35ow1"]

[node name="Main" type="Node2D"]
script = ExtResource("1_t63lk")

[node name="ThoughtSpawner" parent="." instance=ExtResource("2_35ow1")]
position = Vector2(0, 504)

[node name="StartButton" type="Button" parent="."]
offset_left = 670.0
offset_top = 541.0
offset_right = 790.0
offset_bottom = 572.0
text = "Start thoughts"

[node name="StopButton" type="Button" parent="."]
offset_left = 670.0
offset_top = 597.0
offset_right = 787.0
offset_bottom = 628.0
text = "Stop thoughts"

[node name="MinSpeed" type="HSlider" parent="."]
offset_left = 270.0
offset_top = 572.0
offset_right = 433.0
offset_bottom = 588.0
min_value = 1.0
value = 1.0

[node name="MaxSpeed" type="HSlider" parent="."]
offset_left = 257.0
offset_top = 615.0
offset_right = 420.0
offset_bottom = 631.0
min_value = 1.0
value = 20.0

[node name="SpawnInterval" type="HSlider" parent="."]
offset_left = 68.0
offset_top = 581.0
offset_right = 231.0
offset_bottom = 597.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 3.1

[node name="MinLabel" type="Label" parent="."]
offset_left = 319.0
offset_top = 537.0
offset_right = 400.0
offset_bottom = 560.0
text = "min speed"

[node name="MaxLabel" type="Label" parent="."]
offset_left = 312.0
offset_top = 587.0
offset_right = 396.0
offset_bottom = 610.0
text = "max speed"

[node name="FastMinSpeed" type="HSlider" parent="."]
offset_left = 484.0
offset_top = 577.0
offset_right = 647.0
offset_bottom = 593.0
min_value = 1.0
max_value = 500.0
value = 50.0

[node name="FastMaxSpeed" type="HSlider" parent="."]
offset_left = 482.0
offset_top = 624.0
offset_right = 645.0
offset_bottom = 640.0
min_value = 1.0
max_value = 500.0
value = 100.0

[node name="FastMinLabel" type="Label" parent="."]
offset_left = 453.0
offset_top = 549.0
offset_right = 627.0
offset_bottom = 572.0
text = "fast though min speed"

[node name="FastMaxLabel" type="Label" parent="."]
offset_left = 447.0
offset_top = 597.0
offset_right = 630.0
offset_bottom = 620.0
text = "fast thought max speed"

[node name="TimeLabel" type="Label" parent="."]
offset_left = 986.0
offset_top = 539.0
offset_right = 1033.0
offset_bottom = 562.0
text = "time:"

[node name="ThoughtsLabel" type="Label" parent="."]
offset_left = 957.0
offset_top = 599.0
offset_right = 1031.0
offset_bottom = 622.0
text = "thoughts:"

[node name="ResetButton" type="Button" parent="."]
offset_left = 811.0
offset_top = 546.0
offset_right = 935.0
offset_bottom = 577.0
text = "Reset counters"

[node name="SpawnLabel" type="Label" parent="."]
offset_left = 98.0
offset_top = 531.0
offset_right = 221.0
offset_bottom = 554.0
text = "spawn interval"

[node name="Clock" type="Timer" parent="."]

[node name="Spawner" type="Timer" parent="."]

[node name="ClearButton" type="Button" parent="."]
offset_left = 807.0
offset_top = 598.0
offset_right = 929.0
offset_bottom = 629.0
text = "Clear thoughts"

[node name="FastChance" type="HSlider" parent="."]
offset_left = 489.0
offset_top = 524.0
offset_right = 652.0
offset_bottom = 540.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="FastChanceLabel" type="Label" parent="."]
offset_left = 483.0
offset_top = 498.0
offset_right = 564.0
offset_bottom = 521.0
text = "fast thought chance"
